<resources>
    <string name="app_name">Mega Generator</string>

    <string name="action_settings">Configurações</string>

    <!-- BottomNavigationView title -->
    <string name="title_home">Home</string>
    <string name="title_news">Notícias</string>

    <!-- Carview Home -->
    <string name="card_title">%1$s  %2$d (%3$s)</string>
    <string name="card_title_sena">Sena - 6 números acertados</string>
    <string name="card_title_quina">Quina - 5 números acertados</string>
    <string name="card_title_quadra">Quadra - 4 números acertados</string>
    <string name="card_title_concurso">Concurso</string>
    <string name="label_acumulou">Acumulou!</string>
    <string name="network_error">Erro na conexão</string>
    <string name="retry">Novamente</string>
    <string name="checkout_last_result">Veja o último resultado da Mega-Sena</string>
    <string name="share_via">Compartilhar por</string>
    <string name="next_draw">Próx. concurso:</string>
    <string name="estimated_prize">Valor estimado:</string>

    <string name="permission_denied">Sem permissão para armazegar imagens</string>

    <!-- NavigationView title -->
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="Home">Home</string>
    <string name="results">Resultados anteriores</string>
    <string name="number_generator">Gerador de palpites</string>
    <string name="near_lottery">Lotéricas próximas</string>
    <string name="how_to_play">Como jogar</string>
    <string name="prices_probability">Preços e Probabilidades</string>
    <string name="about">Sobre</string>

    <!-- cardview -->
    <string name="no_winners">Não houve acertador</string>
    <string name="winners_bets">apostas ganhadoras, R$</string>
    <string name="today">hoje</string>
    <string name="tomorrow">amanhã</string>
    <string name="days">dias</string>

    <!-- DownloadHistoryActivity -->
    <string name="loading_history">Baixando histórico de sorteios</string>
    <string name="welcome">Bem vindo!</string>
    <string name="downloading">Baixando &#8230;</string>
    <string name="downloaded">Arquivo baixado</string>
    <string name="unzip">Arquivo descompactado</string>

    <!-- HistoryResultFragment -->
    <string name="item_title_concurso">Concurso</string>
    <string name="result_copied">Sorteio Copiado</string>
    <string name="result">Sorteio</string>
    <string name="date">Data</string>
    <string name="numbers">Números</string>
    <string name="megasena">Mega-Sena</string>
    <string name="search_hint">ex: 1700</string>

    <!-- Generator Fragment -->
    <string name="numbers_per_bet">Qtd. números por aposta</string>
    <string name="number_bet_prompt">Quantidade</string>
    <string name="generate">Gerar</string>
    <string name="number_bets">Qtd. Apostas</string>
    <string name="refuse_bet_already_drawn">Recusar jogos que já foram sorteados</string>
    <string name="refuse_number_sequence">Recusar jogos com números em sequência</string>
    <string name="generated_bets">Jogos Gerados</string>

    <string-array name="number_bet_array">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string name="reason">Motivo</string>
    <string name="reasonHistory6">6 dos números já cairam em um sorteio</string>
    <string name="reasonHistory5">5 dos números já cairam em um sorteio</string>
    <string name="reasonSequenceHorizontal">Há uma sequência de 3 ou mais números</string>
    <string name="bet_generated_number">Aposta #</string>
    <string name="bet_generated_refused">Apostas geradas recusadas</string>
    <string name="ok">OK</string>

    <!-- NearbyLotteryFragmentment -->
    <string name="distance">Distância</string>
    <string name="updating_location">Atualizando sua localização</string>
    <string name="km_label">km</string>
    <string name="meters_label">m</string>
    <string name="location_permission_denied">Permissão negada</string>
    <string name="loading_location">Carregando sua localização</string>

    <string name="how_to_play_content" formatted="false"><![CDATA[<p>A Mega-Sena paga milhões para o acertador dos 6 números sorteados. Ainda é possível ganhar prêmios ao acertar 4 ou 5 números dentre os 60 disponíveis no volante de apostas. Para realizar o sonho de ser o próximo milionário, você deve marcar de 6 a 15 números do volante, podendo deixar que o sistema escolha os números para você (Surpresinha) e/ou concorrer com a mesma aposta por 2, 4 ou 8 concursos consecutivos (Teimosinha).</p>
<h1><font color=#388E3C>Sorteios</font></h1>
<p>Os sorteios da Mega-Sena são realizados duas vezes por semana, às quartas e aos sábados.</p>

<h1><font color=#388E3C>Apostas</font></h1>
<p>A aposta mínima, de 6 números, custa R$ 3,50. Quanto mais números marcar, maior o preço da aposta e maiores as chances de faturar o prêmio mais cobiçado do país.</p>

<h1><font color=#388E3C>Premiação</font></h1>
<p>O prêmio bruto corresponde a 45,3% da arrecadação, já computado o adicional destinado ao Ministério do Esporte. Dessa porcentagem:</p>
<ul>
    <li>35% são distribuídos entre os acertadores dos 6 números sorteados (Sena);</li>
    <li>19% entre os acertadores de 5 números (Quina);</li>
    <li>19% entre os acertadores de 4 números (Quadra);</li>
    <li>22% ficam acumulados e são distribuídos aos acertadores dos 6 números nos concursos de final 0 ou 5.</li>
    <li>5% ficam acumulados para a primeira faixa - sena - do último concurso do ano de final 0 ou 5 (Mega da Virada).</li>
</ul>
<h3><font color=#4caf50>Recebimento de prêmios</font></h2>

<p>Você pode receber seu prêmio em qualquer casa lotérica credenciada ou nas agências da Caixa. Caso o prêmio líquido seja superior a R$ 1.332,78 (bruto de R$ 1.903,98) o pagamento pode ser realizado somente nas agências da Caixa. Valores iguais ou acima de R$ 10.000,00 são pagos após 2 dias de sua apresentação na agência da Caixa.</p>

<h1><font color=#388E3C>Acumulação</font></h1>
<p>Não havendo acertador em qualquer faixa, o valor acumula para o concurso seguinte, na respectiva faixa de premiação. Não deixe de conferir o seu bilhete de aposta.</p>

<p>Os prêmios prescrevem 90 dias após a data do sorteio. Após esse prazo, os valores são repassados ao tesouro nacional para aplicação no FIES - Fundo de Financiamento ao Estudante do Ensino Superior.</p>]]></string>

    <!-- PricesFragment -->
    <string name="probability_of_correctness">Probabilidade de acerto (1 em)</string>
    <string name="number_of_bet_played">Quantidade de nº jogados</string>
    <string name="bet_value">Valor de aposta</string>
    <string name="senna">Sena</string>
    <string name="quina">Quina</string>
    <string name="quatrain">Quadra</string>

    <!-- about Dialog -->
    <string name="version_app">Versão:</string>
    <string name="about_content">
        <![CDATA[
<p>App desenvolvido para a consulta e  geração de apostas para a Mega-sena da Loteria da Caixa.</p>
<p>Esse aplicativo não possui nenhum vínculo com a Caixa Econômica Federal.
Todas as informações são retiradas do site: <a href=\"http://loterias.caixa.gov.br/\">loterias.caixa.gov.br</a></p>
<p>Desenvolvido por: <a href=\"mailto:hideki.fabio@gmail.com\">Fábio Hideki</a></p>
        ]]>
    </string>

    <!-- Content Descriptions -->
    <string name="logo_app_content_description">Logo do aplicativo</string>
    <string name="copy_bets_content_description">Botão para copiar apostas geradas</string>
    <string name="refused_content_description">Botão para verificar jogos gerados, mas recusados</string>
    <string name="card_share_content_description">Botão para compartilhar o último resultado da Mega-sena</string>
    <string name="retry_content_description">Botão para tentar carregar os dados do último sorteio novamente</string>
    <string name="update_location_content_description">Botão para atualizar sua localização</string>
    <string name="history_share_content_description">Botão para compartilhar um sorteio anterior</string>
    <string name="history_copy_content_description">Botão para copiar um sorteio anterior</string>
    <string name="location_logo_content_description">Logo que representa um local</string>
    <string name="maps_link_content_description">Botão para abrir lotérica no Maps</string>

    <!-- Widget -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
