<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/top_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_outline"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_generator"
            android:icon="@drawable/all_inclusive"
            android:title="@string/number_generator" />
        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/newspaper"
            android:title="@string/results" />
        <item
            android:id="@+id/nav_near_lottery"
            android:icon="@drawable/map_marker_radius"
            android:title="@string/near_lottery" />
    </group>

    <group
        android:id="@+id/bottom_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_how_to_play"
            android:icon="@drawable/tooltip_text"
            android:title="@string/how_to_play" />
        <item
            android:id="@+id/nav_price_prob"
            android:icon="@drawable/chart_bar"
            android:title="@string/prices_probability" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/information_variant"
            android:title="@string/about" />
    </group>

</menu>
